fix: header z-index and product slider active class

--- a/dev/sass/header.scss
+++ b/dev/sass/header.scss
@@ -1,6 +1,6 @@
 .header {
     padding: 48px 0;
-    z-index: 1;
+    z-index: 2;
     backdrop-filter: blur(5px);
     background-color: #12151794;
     position: fixed;
