--- a/dev/sass/media/_media_max_width767.scss
+++ b/dev/sass/media/_media_max_width767.scss
@@ -80,8 +80,9 @@ h6, .h6 {
         font-size: 18px;
     }
 
-     &label_text-large {
+     &.label_text-large {
         font-size: 24px;
     }         
-}
-}
+}}
+
+
