--- a/dev/sass/product-slider.scss
+++ b/dev/sass/product-slider.scss
@@ -4,6 +4,10 @@
     width: 278px;
 }
 
+.swiper-slide-active .product {
+    border-color: $secondary-color;
+}
+
 .product {
     border: 1px solid #D9D9D9;
     border-radius: 28px;
